<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed582</name>
  <version>0.0.1</version>
  <description>ros package for acquiring rtd temperatures from the brainboxes Ed582</description>
  <maintainer email="robert.raye@nrel.gov">m2</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>modaq_messages</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
